# domotix

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  README.md  architecture.md  pyproject.toml  testing.md
.github/: copilot-instructions.md
docs/: architecture.md
domotix/: __init__.py  factories.py
domotix/cli/: __init__.py  device_cmds.py  device_cmds_complete.py  device_cmds_di.py  main.py
domotix/commands/: __init__.py  close_shutter.py  command.py  open_shutter.py  turn_off.py  turn_on.py
domotix/controllers/: __init__.py  device_controller.py  light_controller.py  sensor_controller.py  shutter_controller.py
domotix/core/: __init__.py  config.py  controller.py  database.py  dependency_injection.py  error_handling.py  factories.py  interfaces.py  logging_system.py  migration.py  monitoring.py  service_configuration.py  service_provider.py  singleton.py  state_manager.py  test_utils.py
domotix/globals/: __init__.py  enums.py  exceptions.py
domotix/models/: __init__.py  base_model.py  device.py  light.py  persistence.py  sensor.py  shutter.py
domotix/persistence/: database.py
domotix/persistence/models/: device_model.py
domotix/persistence/repositories/: __init__.py  device_repository  light_repository.py
domotix/repositories/: __init__.py  device_repository.py  light_repository.py  sensor_repository.py  shutter_repository.py
source/: conf.py  index.rst
src/domotix/: app.py
tests/: conftest.py  test_cli.py  test_commands.py  test_coverage_complete.py  test_coverage_final.py  test_coverage_maximum.py  test_enums.py  test_imports.py  test_models.py  test_state_manager.py
tests/fixtures/: __init__.py  device_factories.py
tests/test_cli/: __init__.py  test_cli.py  test_cli_configuration.py  test_device_commands.py
tests/test_commands/: __init__.py  test_commands.py
tests/test_controllers/: __init__.py  test_advanced_operations.py  test_controllers.py
tests/test_core/: test_controller.py  test_imports.py  test_state_manager.py
tests/test_e2e/: README.md  pytest.ini  test_cli_workflows.py  test_device_workflows.py  test_error_recovery.py  test_performance_scenarios.py  test_simple_cli.py  test_simple_e2e.py
tests/test_factories/: __init__.py  test_factories.py  test_factories_modern.py
tests/test_globals/: __init__.py  test_enums.py  test_error_handling.py  test_exceptions.py
tests/test_integration/: __init__.py  test_cli_integration.py  test_persistence_integration.py
tests/test_models/: __init__.py  test_models.py  test_sensor_error_handling.py
tests/test_repositories/: __init__.py  test_device_repository.py  test_specialized_repositories.py
