[project]
name = "domotix"
version = "0.1.0"
description = "Système domotique"
authors = [
    {name = "Quentin Sautiere", email = "contact@quentinsautiere.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.13.0",
    "click>=8.0.0,<9.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "paho-mqtt>=2.1.0,<3.0.0",
    "fastapi>=0.115.5,<0.116.0",
    "uvicorn>=0.32.1,<0.33.0",
    "httpx>=0.25.0,<1.0.0",
    "pre-commit (>=4.2.0,<5.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)"
]

[tool.poetry]
name = "domotix"
version = "0.1.0"
description = "Système domotique"
authors = ["Quentin Sautiere <contact@quentinsautiere.com>"]
packages = [{include = "domotix"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-httpx = "^0.30.0"
pytest-cov = "^4.0.0"
coverage = "^7.4.0"
black = "^25.1.0"
flake8 = "^7.3.0"
sphinx = "^8.1.3"
sphinx-click = "^6.0.0"
pre-commit = "^4.2.0"
isort = "^5.13.2"
mypy = "^1.13.0"
bandit = "^1.8.0"
types-PyYAML = "^6.0.12"
sphinx-rtd-theme = "^3.0.2"
myst-parser = "^4.0.1"
pytest-xdist = "^3.8.0"
pytest-mock = "^3.14.1"
faker = "^37.4.2"
factory-boy = "^3.3.3"
hypothesis = "^6.136.4"
# Line removed as pytest-benchmark is unused.

[tool.poetry.scripts]
domotix = "domotix.cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.flake8]
max-line-length = 88
ignore = ["E203", "W503", "D100", "D104", "D200", "E902"]
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist"
]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
show_error_codes = true
strict_optional = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.coverage.run]
source = ["domotix"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "venv/*",
    ".venv/*"
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=domotix",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov"
]
